--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,15 +1,24 @@
 <h2>My Heroes</h2>
+<!--  -->
 <ul class="heroes">
-  <li *ngFor="let hero of heroes">
+  <li class="r" *ngFor="let hero of heroes">
+    <a routerLink="/detail/{{hero.id}}">
+      <span class="badge">{{hero.id}}</span> {{hero.name}}
+    </a>
+  </li>
+</ul>
+<!--  -->
+<h2>My Heroes (without redirect)</h2>
+<ul class="heroes">
+  <li class="nr" *ngFor="let hero of heroes">
     <button [class.selected]="hero === selectedHero" type="button" (click)="onSelect(hero)">
-      <span class="badge">{{hero.id}}</span>
+      <span class="badge-1">{{hero.id}}</span>
       <span class="name">{{hero.name}}</span>
     </button>
   </li>
 </ul>
-
 <app-hero-detail [hero]="selectedHero"></app-hero-detail>
-
+<!--  -->
 <h2>Player {{hero.name | uppercase}} Details</h2>
 <div><span>id: </span>{{hero.id}}</div>
 <div><span>name: </span>{{hero.name}}</div>
